Fix dark mode for quiz

--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -1,9 +1,3 @@
-
-  body {
-    font-family: sans-serif;
-    background-color:whitesmoke;
-  }
-  
   .container {
     display: flex;
     flex-wrap: wrap;
